[gd_scene load_steps=15 format=2]

[ext_resource path="res://JesusSaves/assets/audio/Vampire Attack Grunt and Hiss 2.wav" type="AudioStream" id=1]
[ext_resource path="res://JesusSaves/assets/audio/Body Fall.wav" type="AudioStream" id=2]
[ext_resource path="res://JesusSaves/assets/art/enemy/zombie/zombie_2.png" type="Texture" id=3]
[ext_resource path="res://JesusSaves/src/Enemy/Zombie/Zombie.gd" type="Script" id=4]
[ext_resource path="res://JesusSaves/src/Core/FloorArea.tscn" type="PackedScene" id=5]









[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 29 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HpBar:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 1.1, 1.2, 1.4 ),
"transitions": PoolRealArray( 2, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( -10, -38 ), Vector2( -10, 22 ), Vector2( -10, 15 ), Vector2( -10, 22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Die:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Thump:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 22, 21, 22 ]
}

[sub_resource type="Animation" id=5]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 15.0333

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.686275, 0.247059, 0.247059, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.372549, 0.372549, 0.372549, 0.392157 )

[node name="ZombieP" type="KinematicBody2D" groups=[
"Enemy",
]]
z_index = 1
collision_layer = 2
collision_mask = 35
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 6
hframes = 6
frame = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -100, -100, 200, 200 )
process_parent = true
physics_process_parent = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/walk = SubResource( 6 )
next/attack = "idle"

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="LeftAttackArea" type="Area2D" parent="."]
position = Vector2( -40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAttackArea"]
shape = SubResource( 7 )

[node name="RightAttackArea" type="Area2D" parent="."]
position = Vector2( 40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAttackArea"]
shape = SubResource( 7 )

[node name="FloorArea" parent="." instance=ExtResource( 5 )]
position = Vector2( -30, 39 )

[node name="HpBar" type="ProgressBar" parent="."]
margin_left = -10.0
margin_top = -38.0
margin_right = 10.0
margin_bottom = -24.0
rect_scale = Vector2( 1, 0.5 )
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 30.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="Thump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="LeftAttackArea" to="." method="_on_LeftAttackArea_body_entered"]
[connection signal="body_entered" from="RightAttackArea" to="." method="_on_RightAttackArea_body_entered"]
[connection signal="body_exited" from="FloorArea" to="." method="_on_FloorArea_body_exited"]
